# tee-auth

./: .cursorrules  .gitignore  README.md  badges.md  fix_github_runner_permissions.sh  fix_go_permissions.sh  fix_go_sumdb.sh  genesis_boot_request.json  update_runner_go.sh
.cursor/rules/: general-rules.mdc  testing-rules.mdc
.github/.cursor/rules/: runner.mdc
.github/workflows/: README.md  badges.yml  gauth.yml  main.yml  renclave-v2.yml  web.yml
blockchain/docker/: Dockerfile  README.md  docker-compose.yml  env.example  package.json
blockchain/docker/config/: genesis.json
blockchain/docker/scripts/: create-account.sh  start-dev.sh  start-faucet.sh  test-faucet.sh
docs/: README.md  api-reference.md  api-reference.mdx  architecture.md  architecture.mdx  documentation-summary.mdx  encryption-decryption.md  encryption-decryption.mdx  genesis-boot.md  genesis-boot.mdx  github-actions-setup.mdx  introduction.mdx  key-management.md  key-management.mdx  mint.json  openapi.json  quickstart.mdx  tee-instances.md  tee-instances.mdx  tee-to-tee-sharing.md  tee-to-tee-sharing.mdx  testing-guide.md  testing-guide.mdx
docs/api-reference/: api-playground.mdx  authentication.mdx  test-server-selector.mdx
docs/api-reference/endpoint/: approve-activity.mdx  create-api-keys.mdx  create-authenticators.mdx  create-organization.mdx  create-private-key.mdx  create-user.mdx  create-wallet.mdx  delete-organization.mdx  delete-private-key.mdx  delete-user.mdx  delete-wallet.mdx  get-organization.mdx  get-private-key.mdx  get-user.mdx  get-wallet.mdx  list-organizations.mdx  list-private-keys.mdx  list-users.mdx  list-wallets.mdx  sign-transaction.mdx
docs/concepts/: architecture-overview.mdx  gauth-architecture.mdx  renclave-architecture.mdx
docs/turnkey/: README.md  llms-full.txt  llms.txt
gauth/: Makefile  OBSERVABILITY.md  README.md  TEST_IMPLEMENTATION_SUMMARY.md  coverage.html  docker-compose.yml  env.example  go.mod  go.sum
gauth/.github/workflows/: test.yml
gauth/coverage/: unit.html  unit.out
gauth/docker/: Dockerfile
gauth/migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql  002_make_public_keys_optional.down.sql  002_make_public_keys_optional.up.sql  003_add_wallet_seed_and_private_key_fields.down.sql  003_add_wallet_seed_and_private_key_fields.up.sql  004_add_global_email_uniqueness.down.sql  004_add_global_email_uniqueness.up.sql  005_add_entropy_and_private_key_fields.down.sql  005_add_entropy_and_private_key_fields.up.sql  006_remove_public_key_from_wallets.down.sql  006_remove_public_key_from_wallets.up.sql
gauth/observability/: README.md  grafana-dashboards.yaml  grafana-datasources.yaml  loki-config.yaml  otel-collector-config.yaml  prometheus.yml  promtail-config.yaml
gauth/postman/: README.md  gauth-grpc.postman_collection.json  gauth-grpc.postman_environment.json  gauth-rest-api.postman_collection.json  gauth-rest-api.postman_environment.json  renclave-v2-api.postman_collection.json  renclave-v2-api.postman_environment.json
gauth/scripts/: run-tests.sh  test-coverage.sh  test-summary.sh
gauth/test/: README.md  coverage_test.go
renclave-v2/: Cargo.toml  DEPENDENCY_FLOW.md  Makefile  README-genesis-setup.md  README.md  TESTING.md  cleanup-renclave.sh  setup-renclave-genesis.sh  test-interactive.sh  test-renclave-setup.sh
renclave-v2/.cargo/: config.toml
renclave-v2/benchmarks/: Cargo.toml
renclave-v2/benchmarks/benches/: concurrent_operations.rs  seed_generation.rs  seed_validation.rs  stress_tests.rs
renclave-v2/docker/: Dockerfile  Dockerfile.tee  Dockerfile.test  Dockerfile.test-genesis  README-EXTERNAL-SHARE-FLOW.md  README.md  build.sh  docker-compose.test.yml  docker-compose.yml
renclave-v2/docker/scripts/: 01-generate-keys.sh  02-start-services.sh  03-genesis-boot.sh  04-distribute-shares.sh  06-inject-shares.sh  07-verify-results.sh  run-complete-flow.sh  start-services.sh  test-api.sh  test-comprehensive.sh
renclave-v2/scripts/: 05-decrypt-shares.sh  ci-test.sh  detect-env.sh  generate-coverage.sh  run-performance-docker.sh  run-performance-tests.sh  run-tests-docker.sh  run-tests.sh
renclave-v2/src/enclave/: Cargo.toml  test_tee_communication_simple.rs
renclave-v2/src/enclave/src/: application_state.rs  attestation.rs  data_encryption.rs  data_encryption_tests.rs  genesis_boot.rs  lib.rs  main.rs  manifest.rs  nitro.rs  quorum.rs  quorum_tests.rs  seed_generator.rs  seed_generator_tests.rs  storage.rs  tee_communication.rs  tee_communication_tests.rs  tee_waiting.rs  transaction_signing.rs
renclave-v2/src/host/: Cargo.toml
renclave-v2/src/host/src/: api_handlers.rs  enclave_client.rs  lib.rs  main.rs
renclave-v2/src/network/: Cargo.toml
renclave-v2/src/network/src/: connectivity.rs  lib.rs  tap.rs
renclave-v2/src/shared/: Cargo.toml
renclave-v2/src/shared/src/: lib.rs
renclave-v2/src/tools/: Cargo.toml  genesis_key_generator.rs  member_decryptor.rs  share_distributor.rs  share_injector.rs  verification_tool.rs
renclave-v2/tests/: Cargo.toml  README.md  api_entropy_validation_tests.rs  e2e_tests.rs  e2e_tests_enhanced.rs  entropy_validation_security_tests.rs  integration_tests.rs  integration_tests_enhanced.rs  test_config.rs  test_runner.rs
terraform/: COMPREHENSIVE_TOOLS_SUMMARY.md  DATABASE_TOOLS_UPDATE.md  MANUAL_SETUP_GUIDE.md  MIGRATION_GUIDE.md  Makefile  README.md  SCRIPT_FIXES_SUMMARY.md  main.tf  terraform.tfvars.example  variables.tf
terraform/scripts/: runner_usage_guide.md
terraform/templates/: README.md  check_runner_logs.sh  install_tools.sh  quick_install_tools.sh  runner_usage_guide.md  user_data.sh  user_data_simple.sh  workflow-examples.yml
web/: .env.example  .eslintrc.js  CODE_QUALITY_STANDARDS.md  DIALOG_FORMS_IMPLEMENTATION.md  Dockerfile  GAUTH_INTEGRATION.md  README-Docker.md  README.md  SESSION_MANAGEMENT_INTEGRATION.md  TESTING.md  docker-compose.yml  jest.config.js  jest.setup.js  lighthouse-results.json  lighthouserc.js  next.config.js  package-lock.json  package.json  playwright.accessibility.config.ts  playwright.config.ts  tailwind.config.ts
(+169 files in other folders)
