[workspace]
members = [
    "src/enclave",
    "src/host",
    "src/shared",
    "src/network"
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Cryptography and BIP39
bip39 = "2.0"
rand = "0.8"
bitcoin = "0.32"
secp256k1 = "0.29"

# HTTP server (for host)
axum = "0.7"
hyper = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["timeout"] }

# Networking
nix = "0.27"

# Utilities
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }

# Note: AWS Nitro libraries removed for QEMU compatibility
