[package]
name = "renclave-enclave"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "enclave"
path = "src/main.rs"

[dependencies]
renclave-shared = { path = "../shared" }
renclave-network = { path = "../network" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
bip39 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
bitcoin = { workspace = true }
secp256k1 = { workspace = true }

# Note: AWS Nitro libraries removed for QEMU compatibility
