[package]
name = "renclave-enclave"
version = "0.1.0"
edition = "2021"

[lib]
name = "renclave_enclave"
path = "src/lib.rs"

[[bin]]
name = "enclave"
path = "src/main.rs"

[[bin]]
name = "test_tee_communication_simple"
path = "test_tee_communication_simple.rs"

[dependencies]
renclave-shared = { path = "../shared" }
renclave-network = { path = "../network" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
bip39 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
bitcoin = { workspace = true }
secp256k1 = { workspace = true }

# Quorum key generation dependencies
p256 = { workspace = true }
aes-gcm = { workspace = true }
hmac = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
zeroize = { workspace = true }
borsh = { workspace = true }
serde_bytes = { workspace = true }
tempfile = "3.8"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tokio-test = { workspace = true }
env_logger = "0.11"

# Note: AWS Nitro libraries removed for QEMU compatibility
